--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,11 @@
 body {
   margin: 0;
   font-family: Inter, sans-serif;
+  height: 100vh;
+  background-color: #282D35;
 }
 
-.av {
+nav {
   display: flex;
   align-items: center;
   background-color: #21222A;
@@ -15,16 +17,53 @@ body {
   padding: 30px 25px;
 }
 
-nav > h3, nav > h4 {
+.nav--logo_text, .nav--title {
   margin: 0;
 }
 
-nav > img {
-  width: 30px
-  margin-right 0;
+.nav--icon {
+  width: 30px;
+  margin-right: 7px;
 }
 
-nav > h3 {
+.nav--logo_text {
   margin-right: auto;
-  color: #61DAFB
+  color: #61DAFB;
+  font-weight: 700;
+  font-size: 22px;
 }
+
+.nav--title {
+  color: #DEEBF8;
+  font-weight: 600;
+}
+
+main {
+  padding: 57px 27px;
+  color: white;
+  background-image: url(./images/react-logo-large.png);
+  background-repeat: no-repeat;
+  background-position: right 75%;
+}
+
+.main--title {
+  margin: 0;
+  font-size: 39px;
+  letter-spacing: -0.05em;
+}
+
+.main--facts {
+  margin-top: 46px;
+  max-width: 400px;
+}
+
+.main--facts > li {
+  line-height: 19px;
+  padding-block: 10px;
+}
+
+.main--facts > li::marker {
+  color: #61DAFB;
+  font-size: 1.4rem;
+}
+
